// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputField it always renders a label when \`alwaysShowLabel\` is true 1`] = `
.c2 {
  margin-left: 8px;
  margin-right: -32px;
  margin-top: -12px;
}

.c5 {
  margin-left: -32px;
  margin-top: -12px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 0px;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  font-family: inherit;
  font-size: 14px;
  background-color: transparent;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  border-color: #d1d6db;
  padding-top: 14px;
  padding-bottom: 14px;
  padding-left: 12px;
  padding-right: 12px;
  margin: 0;
  border-color: #d1d6db;
  box-shadow: 0 0 0 0 #d1d6db;
  margin-top: -20px;
  padding-left: 40px;
  padding-right: 40px;
}

.c4::-webkit-input-placeholder {
  color: #687B8E;
}

.c4::-moz-placeholder {
  color: #687B8E;
}

.c4:-ms-input-placeholder {
  color: #687B8E;
}

.c4::placeholder {
  color: #687B8E;
}

.c4::-ms-clear {
  display: none;
}

.c4:focus {
  outline: 0;
  border-color: #007aff;
  box-shadow: 0 0 0 1px #007aff;
}

.c0 {
  font-size: 10px;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  display: block;
  width: 100%;
  margin: 0;
  margin-top: 5px;
  padding-left: 40px;
  font-size: 10px;
  color: #687B8E;
  font-weight: 700;
}

<div
  className=""
>
  <label
    className="c0"
    color="gray"
    fontSize="10px"
    fontWeight="bold"
    htmlFor="with-both-icons"
    style={
      Object {
        "animation": "eMLfYp 0.3s",
      }
    }
  >
    A Label
  </label>
  <div
    className="c1"
    width={1}
  >
    <div
      className="c2"
    >
      <svg
        className="c3"
        fill="currentcolor"
        height={24}
        viewBox="0 0 24 24"
        width={24}
      >
        <path
          d="M20,4H4C2.9,4,2,4.9,2,6v12c0,1.1,0.9,2,2,2h16c1.1,0,2-0.9,2-2V6C22,4.9,21.1,4,20,4z M20,8
        	l-8,5L4,8V6l8,5l8-5V8z"
        />
      </svg>
    </div>
    <input
      aria-label={null}
      className="c4"
      id="with-both-icons"
      onChange={[Function]}
      style={
        Object {
          "paddingBottom": "8px",
          "paddingTop": "20px",
          "transition": "padding-top 0.1s, padding-bottom 0.1s",
        }
      }
      width={1}
    />
    <div
      className="c5"
    >
      <svg
        className="c3"
        fill="currentcolor"
        height={24}
        viewBox="0 0 24 24"
        width={24}
      >
        <path
          d="M20,4H4C2.9,4,2,4.9,2,6v12c0,1.1,0.9,2,2,2h16c1.1,0,2-0.9,2-2V6C22,4.9,21.1,4,20,4z M20,8
        	l-8,5L4,8V6l8,5l8-5V8z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`InputField it renders a form field wth a label and icons 1`] = `
.c4 {
  margin-left: -32px;
  margin-top: 8px;
}

.c1 {
  margin-left: 8px;
  margin-right: -32px;
  margin-top: 8px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 0px;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c3 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  font-family: inherit;
  font-size: 14px;
  background-color: transparent;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  border-color: #d1d6db;
  padding-top: 14px;
  padding-bottom: 14px;
  padding-left: 12px;
  padding-right: 12px;
  margin: 0;
  border-color: #d1d6db;
  box-shadow: 0 0 0 0 #d1d6db;
  padding-left: 40px;
  padding-right: 40px;
}

.c3::-webkit-input-placeholder {
  color: #687B8E;
}

.c3::-moz-placeholder {
  color: #687B8E;
}

.c3:-ms-input-placeholder {
  color: #687B8E;
}

.c3::placeholder {
  color: #687B8E;
}

.c3::-ms-clear {
  display: none;
}

.c3:focus {
  outline: 0;
  border-color: #007aff;
  box-shadow: 0 0 0 1px #007aff;
}

<div
  className=""
>
  <div
    className="c0"
    width={1}
  >
    <div
      className="c1"
    >
      <svg
        className="c2"
        fill="currentcolor"
        height={24}
        viewBox="0 0 24 24"
        width={24}
      >
        <path
          d="M20,4H4C2.9,4,2,4.9,2,6v12c0,1.1,0.9,2,2,2h16c1.1,0,2-0.9,2-2V6C22,4.9,21.1,4,20,4z M20,8
        	l-8,5L4,8V6l8,5l8-5V8z"
        />
      </svg>
    </div>
    <input
      aria-label={null}
      className="c3"
      id="with-both-icons"
      onChange={[Function]}
      style={
        Object {
          "paddingBottom": "14px",
          "paddingTop": "14px",
          "transition": "padding-top 0.1s, padding-bottom 0.1s",
        }
      }
      width={1}
    />
    <div
      className="c4"
    >
      <svg
        className="c2"
        fill="currentcolor"
        height={24}
        viewBox="0 0 24 24"
        width={24}
      >
        <path
          d="M20,4H4C2.9,4,2,4.9,2,6v12c0,1.1,0.9,2,2,2h16c1.1,0,2-0.9,2-2V6C22,4.9,21.1,4,20,4z M20,8
        	l-8,5L4,8V6l8,5l8-5V8z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`InputField it renders a with a both icons 1`] = `
.c4 {
  margin-left: -32px;
  margin-top: 8px;
}

.c1 {
  margin-left: 8px;
  margin-right: -32px;
  margin-top: 8px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 0px;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c3 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  font-family: inherit;
  font-size: 14px;
  background-color: transparent;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  border-color: #d1d6db;
  padding-top: 14px;
  padding-bottom: 14px;
  padding-left: 12px;
  padding-right: 12px;
  margin: 0;
  border-color: #d1d6db;
  box-shadow: 0 0 0 0 #d1d6db;
  padding-left: 40px;
  padding-right: 40px;
}

.c3::-webkit-input-placeholder {
  color: #687B8E;
}

.c3::-moz-placeholder {
  color: #687B8E;
}

.c3:-ms-input-placeholder {
  color: #687B8E;
}

.c3::placeholder {
  color: #687B8E;
}

.c3::-ms-clear {
  display: none;
}

.c3:focus {
  outline: 0;
  border-color: #007aff;
  box-shadow: 0 0 0 1px #007aff;
}

<div
  className=""
>
  <div
    className="c0"
    width={1}
  >
    <div
      className="c1"
    >
      <svg
        className="c2"
        fill="currentcolor"
        height={24}
        viewBox="0 0 24 24"
        width={24}
      >
        <path
          d="M20,4H4C2.9,4,2,4.9,2,6v12c0,1.1,0.9,2,2,2h16c1.1,0,2-0.9,2-2V6C22,4.9,21.1,4,20,4z M20,8
        	l-8,5L4,8V6l8,5l8-5V8z"
        />
      </svg>
    </div>
    <input
      aria-label={null}
      className="c3"
      id="with-both-icons"
      onChange={[Function]}
      style={
        Object {
          "paddingBottom": "14px",
          "paddingTop": "14px",
          "transition": "padding-top 0.1s, padding-bottom 0.1s",
        }
      }
      width={1}
    />
    <div
      className="c4"
    >
      <svg
        className="c2"
        fill="currentcolor"
        height={24}
        viewBox="0 0 24 24"
        width={24}
      >
        <path
          d="M20,4H4C2.9,4,2,4.9,2,6v12c0,1.1,0.9,2,2,2h16c1.1,0,2-0.9,2-2V6C22,4.9,21.1,4,20,4z M20,8
        	l-8,5L4,8V6l8,5l8-5V8z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`InputField it renders a with a conditional right side icon 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 0px;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  font-family: inherit;
  font-size: 14px;
  background-color: transparent;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  border-color: #d1d6db;
  padding-top: 14px;
  padding-bottom: 14px;
  padding-left: 12px;
  padding-right: 12px;
  margin: 0;
  border-color: #d1d6db;
  box-shadow: 0 0 0 0 #d1d6db;
  padding-left: 8px;
}

.c1::-webkit-input-placeholder {
  color: #687B8E;
}

.c1::-moz-placeholder {
  color: #687B8E;
}

.c1:-ms-input-placeholder {
  color: #687B8E;
}

.c1::placeholder {
  color: #687B8E;
}

.c1::-ms-clear {
  display: none;
}

.c1:focus {
  outline: 0;
  border-color: #007aff;
  box-shadow: 0 0 0 1px #007aff;
}

<div
  className=""
>
  <div
    className="c0"
    width={1}
  >
    <input
      aria-label={null}
      className="c1"
      id="with-right-icon"
      onChange={[Function]}
      style={
        Object {
          "paddingBottom": "14px",
          "paddingTop": "14px",
          "transition": "padding-top 0.1s, padding-bottom 0.1s",
        }
      }
      width={1}
    />
  </div>
</div>
`;

exports[`InputField it renders a with a left side icon 1`] = `
.c1 {
  margin-left: 8px;
  margin-right: -32px;
  margin-top: 8px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 0px;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c3 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  font-family: inherit;
  font-size: 14px;
  background-color: transparent;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  border-color: #d1d6db;
  padding-top: 14px;
  padding-bottom: 14px;
  padding-left: 12px;
  padding-right: 12px;
  margin: 0;
  border-color: #d1d6db;
  box-shadow: 0 0 0 0 #d1d6db;
  padding-left: 40px;
}

.c3::-webkit-input-placeholder {
  color: #687B8E;
}

.c3::-moz-placeholder {
  color: #687B8E;
}

.c3:-ms-input-placeholder {
  color: #687B8E;
}

.c3::placeholder {
  color: #687B8E;
}

.c3::-ms-clear {
  display: none;
}

.c3:focus {
  outline: 0;
  border-color: #007aff;
  box-shadow: 0 0 0 1px #007aff;
}

<div
  className=""
>
  <div
    className="c0"
    width={1}
  >
    <div
      className="c1"
    >
      <svg
        className="c2"
        fill="currentcolor"
        height={24}
        viewBox="0 0 24 24"
        width={24}
      >
        <path
          d="M20,4H4C2.9,4,2,4.9,2,6v12c0,1.1,0.9,2,2,2h16c1.1,0,2-0.9,2-2V6C22,4.9,21.1,4,20,4z M20,8
        	l-8,5L4,8V6l8,5l8-5V8z"
        />
      </svg>
    </div>
    <input
      aria-label={null}
      className="c3"
      id="with-left-icon"
      onChange={[Function]}
      style={
        Object {
          "paddingBottom": "14px",
          "paddingTop": "14px",
          "transition": "padding-top 0.1s, padding-bottom 0.1s",
        }
      }
      width={1}
    />
  </div>
</div>
`;

exports[`InputField it renders a with a right side icon 1`] = `
.c2 {
  margin-left: -32px;
  margin-top: 8px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 0px;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  font-family: inherit;
  font-size: 14px;
  background-color: transparent;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  border-color: #d1d6db;
  padding-top: 14px;
  padding-bottom: 14px;
  padding-left: 12px;
  padding-right: 12px;
  margin: 0;
  border-color: #d1d6db;
  box-shadow: 0 0 0 0 #d1d6db;
  padding-left: 8px;
  padding-right: 40px;
}

.c1::-webkit-input-placeholder {
  color: #687B8E;
}

.c1::-moz-placeholder {
  color: #687B8E;
}

.c1:-ms-input-placeholder {
  color: #687B8E;
}

.c1::placeholder {
  color: #687B8E;
}

.c1::-ms-clear {
  display: none;
}

.c1:focus {
  outline: 0;
  border-color: #007aff;
  box-shadow: 0 0 0 1px #007aff;
}

<div
  className=""
>
  <div
    className="c0"
    width={1}
  >
    <input
      aria-label={null}
      className="c1"
      id="with-right-icon"
      onChange={[Function]}
      style={
        Object {
          "paddingBottom": "14px",
          "paddingTop": "14px",
          "transition": "padding-top 0.1s, padding-bottom 0.1s",
        }
      }
      width={1}
    />
    <div
      className="c2"
    >
      <svg
        className="c3"
        fill="currentcolor"
        height={24}
        viewBox="0 0 24 24"
        width={24}
      >
        <path
          d="M20,4H4C2.9,4,2,4.9,2,6v12c0,1.1,0.9,2,2,2h16c1.1,0,2-0.9,2-2V6C22,4.9,21.1,4,20,4z M20,8
        	l-8,5L4,8V6l8,5l8-5V8z"
        />
      </svg>
    </div>
  </div>
</div>
`;
